<resources>
    <string name="app_name">MyLibrary</string>
    <string name="some_error">Some error occurred</string>
    <string name="text_add_new_author">Добавление нового автора</string>
    <string name="text_name">Имя</string>
    <string name="text_first_name">Имя</string>
    <string name="text_last_name">Фамилия</string>
    <string name="text_date_of_birth">Дата рождения</string>
    <string name="text_save_author">Сохранить автора</string>
    <string name="text_first_name_empty">Имя должно быть указанно</string>
    <string name="text_last_name_empty">Фамилия должна быть указана</string>
    <string name="text_date_of_birth_empty">Дата рождения должна быть указана</string>
    <string name="text_author_list">Список авторов</string>
    <string name="text_plus">+</string>
    <string name="text_save_book">Сохранить книгу</string>
    <string name="text_add_new_book">Добавить новую книгу</string>
    <string name="text_book_descriptions">Описание книги</string>
    <string name="text_descriptions_empty">Описание книги не может быть пустым</string>
    <string name="text_book_name">Название книги</string>
    <string name="text_book_name_empty">Название книги не может быть пустым</string>
    <string name="text_book_authors">Авторы</string>
    <string name="text_book_list">Список книг</string>
    <string name="text_author_empty">Список авторов не может быть пустым</string>
    <string name="text_authors">Авторы</string>
    <string name="add_ganres">Добавить жанр</string>
    <string name="text_ganres">Жанры</string>
</resources>